<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/common_title"/>

    <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_tip_1"
                    android:text="A32"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_tip"
                    android:layout_marginTop="10dp"
                    android:text="@string/response_tip"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        style="@style/text_tip_center"
                        android:text="1"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_tip"
                        android:layout_marginEnd="5dp"
                        android:text="@string/text_tip_1"/>

                <View
                        android:layout_width="30dp"
                        android:layout_height="1dp"/>
                <Button
                        android:id="@+id/re_open"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/bn_text_1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@drawable/hphm_button_bg"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_2"
                android:layout_below="@+id/ll_1"
                android:layout_alignLeft="@id/ll_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        style="@style/text_tip_center"
                        android:text="2"/>

                <TextView
                        android:id="@+id/tv_telephone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_tip"
                        android:text="@string/text_tip_2"/>

                <TextView
                        android:id="@+id/tv_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        style="@style/text_tip"
                        android:textStyle="bold"
                        android:textColor="@color/theme_color"
                        android:text="@string/text_tip_2_telephone"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <Button
            android:id="@+id/btn_next"
            android:layout_below="@id/ll_2"
            android:layout_width="250dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            android:background="@drawable/hphm_button_bg"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:text="立即退出"/>
</LinearLayout>